Replace link border by outline to avoid slight content shift

--- a/ui/static/css/common.css
+++ b/ui/static/css/common.css
@@ -36,7 +36,7 @@ a:focus {
     outline: 0;
     color: red;
     text-decoration: none;
-    border: 1px dotted #aaa;
+    outline: 1px dotted #aaa;
 }
 
 a:hover {
